Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17050

Shutdown GUI doesn't show

    XMLWordPrintable

Details

    Description

      The shutdown popup didn't show.

      But it shows on ctrl-alt-suppr only

      ReactOS Version: Build 20200511-0.4.15-dev-208-g909f50a.GNU_8.4.0 / BOOTCD

      The virtual machine hardware:

      1. Windows 2003 ( 32-bit)
      2. Microsoft Windows
      3. 1GB of RAM
      4. PIIX3 Chipset
      5. PS/2 Mouse
      6. 1 CPU only
      7. Hardware virtualisation: Enable Nested Paging
      8. Paravirtualization Interface: Default
      9. Video Memory: 128MB
      10. One monitor
      11. Graphics Controller: VBoxVGA
      12. Acceleration: Enable 3D Acceleration
      13. IDE Controller PIIX3 Type, don't use Host I/O Cache
      14. A CDROM drive and an HARD-DRIVE
      15. Bridged Network Adapter
      16. Com1: Raw File

      Reproduction Method:

      1. First Launch VM
      2. After Everything started, press WINDOW+R
      3. Type CMD
      4. Press enter
      5. Type Shutdown /S

      Nothing will apears. But if you make CTRL+ALT+DEL, you will see the shutdown popup. Then, re-do CTRL+ALT+DELETE and the popup will disapear.

      Here, a photo when no popup is displayed: 

      Here is the photo of CTRL+ALT+SUPPR: 

      Here is the log after CMD has been launched: rosShutdown.log

      Here is the full log, open it with a text editor: reactLife.prt

      Notice that the logs are different because i have losted the original full log so i've recreated one by using the same procedure.

      Please fix this !

      Have a nice day.

      Attachments

        1. reactLife.prt
          34 kB
          valorae_limae
        2. rosShutdown.log
          7 kB
          valorae_limae
        3. sh-gui-ctrl-alt-suppr.png
          29 kB
          valorae_limae
        4. sh-nogui.png
          54 kB
          valorae_limae
        5. logon-shutdonw.png
          64 kB
          valorae_limae
        6. 0001-WINLOGON-Display-the-shutdown-message-popup-dialog-o.patch
          10 kB
          hbelusca

        Issue Links

          Activity

            People

              hbelusca hbelusca
              hexahello valorae_limae
              Votes:
              4 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: