[0.4.14][WINLOGON] Display the shutdown message popup dialog on the current input desktop. (#3259) CORE-17050

Display the shutdown message popup dialog on the current input desktop,
and periodically monitor for any change of the input desktop. When the
latter changes, close the dialog and recreate it on the new input desktop.

In addition, retain the current dialog position and restore it when the
dialog is recreated on the new desktop.

A patch authored by HBelusca.

The regression was introduced by 0.4.10-dev-579-g
c697f191cf72ce02d987aeac7cfff87174461622

This commit is merging back the changes of 0.4.15-dev-1096-g
0ff9b0ff7ec95f3b8cb833b450815a08af4d5c1d
(the minimized patch from JIRA avoiding most surrounding style changes)